tests/negative/pending/parse_keyword_as_var.uzpp
// XATOLIK_KUTILMOQDA: parse: kalit so'zni o'zgaruvchi nomi sifatida ishlatish
ulash "uzpp_runtime.hpp"
butun asosiy() {
    butun agar = 5;
    qaytarish 0;
}
